--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "init": "^0.1.2",
-    "mongodb": "^5.5.0"
+    "mongodb": "^5.5.0",
+    "vercel": "^29.3.3"
   },
   "name": "toys-market-server-site",
   "version": "1.0.0",
